[package]
name = "asyncstd-bench"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
async-std = { git = "https://github.com/async-rs/async-std", branch = "master" }
futures-preview = "=0.3.0-alpha.19"