[package]
name = "bastion-bench"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
bastion = { "path" = "../../bastion/bastion" }
bastion-executor = { "path" = "../../bastion/bastion-executor" }
lightproc = { "path" = "../../bastion/lightproc" }
futures-preview = "=0.3.0-alpha.19"